[package]
name = "testcontainers"
version = "0.0.0"
edition = "2021"

[workspace]
members = [
  "testcontainers",
  "images",
]

[profile.release]
# enable link time optimization
lto = true

# [[example]]
#name = "custom"
#crate-type = ["cdylib"]

[dev-dependencies]
tokio = { version = "1", features = [ "full" ] }
reqwest = "0.11"
color-eyre = "0.6"
