[package]
name = "testcontainers-rs"
version = "0.0.0"
edition = "2021"
authors = ["romnn <contact@romnn.com>"]
description = "rust testcontainers"
license-file = "../LICENSE"
readme = "../README.md"
homepage = "https://github.com/romnn/testcontainers-rs"
repository = "https://github.com/romnn/testcontainers-rs"
publish = true
categories = [
  "development-tools::testing"
]
keywords = [
  "docker",
  "testcontainers",
  "integration-testing",
  "containers",
]
exclude = []

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[dependencies]
thiserror = "1"
lazy_static = "1"
bollard = "0.13"
tokio = { version = "1", features = [ "macros" ] }
async-trait = "0.1"
futures = "0.3"
log = "0.4"
# TODO: remove color-eyre asap
color-eyre = "0.6"

[dev-dependencies]
pretty_assertions = "1"
color-eyre = "0.6"
reqwest = "0.11"

# anyhow = "1"
# approx = "0"
# regex = "1"
# criterion = "0.4"
